# csv-split

./: .gitignore  Cargo.toml  Readme.md  justfile
.github/workflows/: rust.yml
core/: args.rs  file_manager.rs  lib.rs  misc.rs  reader.rs  shared.rs
src/: args.rs  main.rs
tests/: sample-1.csv  sample-2.csv  sample-3.csv  tests.rs
