[package]
name = "split-csv"
authors = ["AOx0"]

readme = "Readme.md"
repository = "https://github.com/AOx0/csv-split"

description = "Split a lage csv file into multiple files"
categories = ["command-line-utilities"]

version = "1.0.0-alpha.1"

rust-version = "1.57"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "spcsv"
path = "src/main.rs"

[dependencies]
clap = { version="3.0.0-rc.7", features=["derive"]}