[package]
name = "split-csv"
authors = ["AOx0 "]

readme = "Readme.md"
repository = "https://github.com/AOx0/csv-split"
homepage = "https://github.com/AOx0/csv-split"

description = "Split a lage csv file into multiple files"
categories = ["command-line-utilities"]

license = "MIT"
version = "0.0.9"

rust-version = "1.57"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "spcsv"
path = "core/lib.rs"

[[bin]]
name = "spcsv"
path = "src/main.rs"

[[test]]
name = "spcsv-tests"
path = "tests/tests.rs"

[dev-dependencies]
lazy_static = "1.4.0"

[dependencies]
clap = { version="3.0.1", features=["derive"]}
indexed_file = "0.1.2"
fs_extra = "1.2.0"
sinner = "0.1.2"